--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   padding: 0;
   box-sizing: border-box;
 
-  font-family: museo;
+  font-family: url("https://www.dafontfree.net/museo-700/f28696.htm");
 }
 
 .box {
